--- a/src/components/navigation/Navigation.sass
+++ b/src/components/navigation/Navigation.sass
@@ -14,9 +14,9 @@
         height: 40%
         img
             max-width: 100%
-            height: 70%
+            height: 100%
             margin: 0 auto
-            object-fit: cover
+            object-fit: contain
             opacity: 0.8
     .menu-icon
         cursor: pointer
